出了一些问题，尝试在windows下编译项目失败，或者说编译成功，但标准输入的缓存被编译器优化了，起码从调试信息来看是这样

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,10 @@
 {
   "configurations": [
     {
-      "name": "build release for win",
+      "name": "build release for win in wsl",
       "type": "shell",
       "request": "launch",
-      "command": "pwd",
+      "command": "echo 1",
       "cwd": "${workspaceRoot}",
       "preLaunchTask": "compiler release for win"
     },
@@ -12,7 +12,7 @@
       "name": "build release",
       "type": "shell",
       "request": "launch",
-      "command": "pwd",
+      "command": "echo 1",
       "cwd": "${workspaceRoot}",
       "preLaunchTask": "compiler release"
     },
@@ -20,7 +20,7 @@
       "name": "build debug",
       "type": "shell",
       "request": "launch",
-      "command": "pwd",
+      "command": "echo 1",
       "cwd": "${workspaceRoot}",
       "preLaunchTask": "compiler debug"
     },
