--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.31"
-rusqlite = "0.30.0"
+rusqlite = { version = "0.30.0", features = ["bundled"] }
