--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,7 @@
             "command": "clang++",
             "args": [
                 "-g",
+                "--std=c++2a",
                 "${file}",
                 "-I./include",
                 "-v",
@@ -23,6 +24,7 @@
             "command": "clang++",
             "args": [
                 "--std=c++20",
+                "--stdlib=libc++",
                 "-fexperimental-library",
                 "${file}",
                 "-I./include",
