用字符串数组代替vector，没效果 用新的sqlit，没效果 问题出在字符串本身 windows的c++就是一本烂账

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,6 +33,14 @@
       "cwd": "${fileDirname}",
       "preLaunchTask": "compiler debug"
     },
+    {
+      "name": "gdb",
+      "type": "by-gdb",
+      "request": "launch",
+      "program": "${workspaceRoot}/target/debug/${fileBasenameNoExtension}.exe",
+      "cwd": "${fileDirname}",
+      "preLaunchTask": "compiler debug"
+    },
   ],
   "version": "2.0.0"
 }
