--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,21 +4,21 @@
       "name": "build release for win in wsl",
       "type": "f5anything",
       "request": "launch",
-      "command": "echo 1",
+      "command": "echo \"该功能暂时不可用\"",
       "preLaunchTask": "compiler release for win"
     },
     {
       "name": "build release",
       "type": "f5anything",
       "request": "launch",
-      "command": "pwd",
+      "command": "ee ./target/release",
       "preLaunchTask": "compiler release"
     },
     {
       "name": "build debug",
       "type": "f5anything",
       "request": "launch",
-      "command": "echo 1",
+      "command": "ee ./target/debug",
       "preLaunchTask": "compiler debug"
     },
     {
